<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_height="match_parent" android:layout_width="match_parent">

	<LinearLayout
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:orientation="horizontal" >

	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="100dip"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:layout_weight="0"
	        android:text="@string/profile_prefix_name"
	        android:textAppearance="?android:attr/textAppearanceLarge" >
	    </TextView>

	    <TextView
	        android:id="@+id/profile_name"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:layout_weight="1"
	        android:text="@string/mock_profile_name"
	        android:textAppearance="?android:attr/textAppearanceLarge" >
	    </TextView>
	</LinearLayout>

	<View android:layout_width="fill_parent" android:layout_height="1dip"
		android:background="#FFAAAAAA" />

		<LinearLayout
		    xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:orientation="horizontal" >

			<TextView
			    android:id="@+id/textView2"
			    android:layout_width="100dip"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_vertical"
			    android:text="@string/profile_prefix_id"
			    android:textAppearance="?android:attr/textAppearanceLarge" >
</TextView>
		
	<TextView
	    android:id="@+id/profile_id"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_vertical"
	    android:text="@string/mock_profile_id"
	    android:textAppearance="?android:attr/textAppearanceLarge" >
</TextView>
		</LinearLayout>
	<View android:layout_width="fill_parent" android:layout_height="1dip"
		android:background="#FFAAAAAA" />
	<View android:layout_width="fill_parent" android:layout_height="1dip"
		android:background="#FFAAAAAA" />

		<LinearLayout
		    xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:orientation="horizontal" >

			<TextView
			    android:id="@+id/textView4"
			    android:layout_width="100dip"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_vertical"
			    android:text="@string/profile_prefix_email"
			    android:textAppearance="?android:attr/textAppearanceLarge" >
</TextView>
		
	<TextView
	    android:id="@+id/profile_email"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_vertical"
	    android:autoLink="email"
	    android:text="@string/mock_profile_email"
	    android:textAppearance="?android:attr/textAppearanceLarge" >
</TextView>
		</LinearLayout>
	<View android:layout_width="fill_parent" android:layout_height="1dip"
		android:background="#FFAAAAAA" />

		<LinearLayout
		    xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:orientation="horizontal" >

			<TextView
			    android:id="@+id/textView5"
			    android:layout_width="100dip"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_vertical"
			    android:text="@string/profile_prefix_phone"
			    android:textAppearance="?android:attr/textAppearanceLarge" >
</TextView>
		
	<TextView
	    android:id="@+id/profile_contact"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_vertical"
	    android:autoLink="phone"
	    android:text="@string/mock_profile_phone"
	    android:textAppearance="?android:attr/textAppearanceLarge" >
</TextView>
		</LinearLayout>
	<View android:layout_width="fill_parent" android:layout_height="1dip"
		android:background="#FFAAAAAA" />

	<RatingBar
	    android:id="@+id/profile_rating_bar"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:layout_weight="1" >
</RatingBar>

	<ImageView
	    android:id="@+id/profile_pic"
	    android:layout_width="wrap_content"
	    android:layout_height="96dp"
	    android:layout_gravity="center"
	    android:layout_weight="10"
	    android:src="@drawable/black1" />

		<View android:layout_width="fill_parent" android:layout_height="1dip"
		android:background="#FFAAAAAA" />

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="5dip"
	    android:layout_marginLeft="5dip"
	    android:layout_marginRight="5dip"
	    android:layout_marginTop="5dip"
	    android:layout_weight="1"
	    android:orientation="horizontal"
	    android:weightSum="1" >

		<TextView
		    android:id="@+id/textView3"
		    android:layout_width="100dip"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_vertical"
		    android:layout_weight="1"
		    android:text="@string/profile_prefix_link"
		    android:textAppearance="?android:attr/textAppearanceLarge" >
</TextView>

		<TextView
		    android:id="@+id/profile_link"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_vertical"
		    android:layout_weight="0.0"
		    android:text="@string/mock_profile_link"
		    android:textAppearance="?android:attr/textAppearanceLarge" >
</TextView>
	</LinearLayout>

	<Button
	    android:id="@+id/profile_edit_button"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="0"
	    android:text="@string/edit" >
</Button>
	<View android:layout_width="fill_parent" android:layout_height="1dip"
		android:background="#FFAAAAAA" />
</LinearLayout>
